corpus/cpp/overload/case-02/snapshots/gcc15/dual_sink_structured/render.verbose.txt
error: [type_mismatch] type or overload mismatch @ src/main.cpp:3:49
help: compare the expected type and actual argument at the call site
raw : invalid conversion from 'const char*' to 'int'
| src/main.cpp:3:49
| int main() { const char *value = "x"; takes_int(value); }
|                                                 ^
debug: rule_id=rule.family.type_overload.structured_or_message
debug: matched_conditions=message_contains=invalid conversion, phase=semantic
other diagnostics:
  - src/main.cpp:1:16: note: initializing argument 1 of 'void takes_int(int)'
details: --formed-explain | raw: --formed-raw